--- a/tasks/templates/tasks/item_list_detail.html
+++ b/tasks/templates/tasks/item_list_detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ScrollToDo - Organize, Prioritize, and Conquer</title>
+    <title>ScrollToDo - {{ item_list.name }}</title>
     {% load static %}
     <link href="{% static 'tasks/styles.css' %}" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -17,11 +17,12 @@
     {% include 'tasks/navbar.html' %}
 
     <div class="container my-5">
-        <h2 class="fw-bold">{{ item_list.name }}</h2>
-        <p class="text-muted">{{ item_list.item_set.count }} items remaining</p>
-        <div class="progress mt-2" style="height: 8px;">
-            <div class="progress-bar bg-success" style="width: {{ completion_percentage }}%;"></div>
+        <div class="d-flex justify-content-between align-items-center">
+            <h2 class="fw-bold">{{ item_list.name }}</h2>
+            <a href="javascript:history.back()" class="btn btn-secondary"><i class="fas fa-arrow-left"></i> Back</a>
         </div>
+        
+        <p class="text-muted">{{ item_list.item_set.count }} items</p>
 
         <div class="mt-4">
             <h3 class="fw-bold">Priority Matrix</h3>
@@ -104,10 +105,7 @@
                 <div class="list-group-item d-flex justify-content-between align-items-center task-item p-2 p-md-3 border border-secondary rounded mb-2 bg-light cursor-move d-inline-block small" draggable="true" data-id="{{ item.id }}" data-position-x="{{ item.position_x }}" data-position-y="{{ item.position_y }}" data-priority="{{ item.priority }}" data-order="{{ item.order }}" data-deadline="{{ item.deadline }}">
                     <div class="w-100 me-2 align-self-start">
                         <input type="checkbox" class="select-item me-2" value="{{ item.id }}">
-                        
-                        <a href="#" class="h6" data-bs-toggle="modal" data-bs-target="#editItemModal" data-id="{{ item.id }}" data-title="{{ item.title }}" data-description="{{ item.description }}" data-deadline="{{ item.deadline }}">
-                            <strong>{{ item.title }}</strong> <i class="fas fa-edit"></i>
-                        </a>
+                        <strong class="h6">{{ item.title }}</strong>
                         <br>
                         <small>Deadline: {{ item.deadline }}</small>
                         <small class="text-muted d-none" id="assigned-quadrant-{{ item.id }}">Assigned to: {{ item.priority }}</small>
@@ -715,13 +713,10 @@ function assignPriority(itemId, priority) {
             newItem.innerHTML = `
             <div class="w-100 me-2 align-self-start">
                 <input type="checkbox" class="select-item me-2" value="${data.item.id}">
-                <strong>${title}</strong> 
-                <button class="btn btn-sm" data-bs-toggle="modal" data-bs-target="#editItemModal" data-id="${data.item.id}" data-title="${title}" data-description="" data-deadline="${deadline}">
-                <i class="fas fa-edit"></i>
-                </button>
+                <strong class="h6">${title}</strong>
                 <br>
                 <small>Deadline: ${deadline ? deadline : 'None'}</small>
-                <small class="text-muted" id="assigned-quadrant-${data.item.id}">Assigned to: </small>
+                <small class="text-muted d-none" id="assigned-quadrant-${data.item.id}">Assigned to: </small>
             </div>
             <div>
                 <div class="d-flex flex-column flex-md-row mb-2 justify-content-end">
@@ -792,13 +787,10 @@ function assignPriority(itemId, priority) {
             newItem.innerHTML = `
                 <div class="w-100 me-2 align-self-start">
                 <input type="checkbox" class="select-item me-2" value="${item.id}">
-                <strong>${item.title}</strong> 
-                <button class="btn btn-sm" data-bs-toggle="modal" data-bs-target="#editItemModal" data-id="${item.id}" data-title="${item.title}" data-description="" data-deadline="">
-                    <i class="fas fa-edit"></i>
-                </button>
+                <strong class="h6">${item.title}</strong>
                 <br>
                 <small>Deadline: None</small>
-                <small class="text-muted" id="assigned-quadrant-${item.id}">Assigned to: </small>
+                <small class="text-muted d-none" id="assigned-quadrant-${item.id}">Assigned to: </small>
                 </div>
                 <div>
                 <div class="d-flex flex-column flex-md-row mb-2 justify-content-end">
